[gd_scene load_steps=2 format=3 uid="uid://djcgy3ikoqe5y"]

[ext_resource type="Script" path="res://scripts/game_menu.gd" id="1_8ii7l"]

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource("1_8ii7l")

[node name="VictoryMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VictoryMenu"]
layout_mode = 0
offset_left = -20.0
offset_top = -80.0
offset_right = 46.0
offset_bottom = -57.0
text = "You win!"

[node name="QuitButton" type="Button" parent="VictoryMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = 28.0
offset_right = 34.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="VictoryMenu/QuitButton" to="." method="_on_quit_button_pressed"]
