[gd_scene load_steps=3 format=3 uid="uid://djcgy3ikoqe5y"]

[ext_resource type="Script" path="res://scripts/game_menu.gd" id="1_8ii7l"]
[ext_resource type="Theme" uid="uid://ow044r6rkkxp" path="res://resources/user_interface.tres" id="2_tjiqe"]

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource("1_8ii7l")

[node name="LevelCompleteMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tjiqe")

[node name="Label" type="Label" parent="LevelCompleteMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -236.0
offset_right = 186.0
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
text = "Level complete!"

[node name="NextLevelButton" type="Button" parent="LevelCompleteMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -38.5
offset_right = 124.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
text = "Next level"

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = 104.0
offset_right = -103.0
offset_bottom = 181.0
grow_horizontal = 0
theme = ExtResource("2_tjiqe")
text = "Pause"

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tjiqe")

[node name="RestartButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -38.0
offset_right = -209.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -38.5
offset_right = 141.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
text = "Main menu"

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_top = -38.0
offset_right = 401.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -236.0
offset_right = 88.0
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
text = "Paused"

[connection signal="mouse_entered" from="LevelCompleteMenu/NextLevelButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="LevelCompleteMenu/NextLevelButton" to="." method="_on_button_click"]
[connection signal="pressed" from="LevelCompleteMenu/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="mouse_entered" from="PauseButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="PauseButton" to="." method="_on_button_click"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="mouse_entered" from="PauseMenu/RestartButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_button_click"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="PauseMenu/MainMenuButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="PauseMenu/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/MainMenuButton" to="." method="_on_button_click"]
[connection signal="mouse_entered" from="PauseMenu/ResumeButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_button_click"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
